Initial library files, moved from https://github.com/danielrs/dobro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,24 @@ name = "pandora"
 version = "0.1.0"
 authors = ["Daniel Rivas <ers.daniel+dev@gmail.com>"]
 
+description = "Unofficial Rust library for interacting with the Pandora API"
+
+homepage = "https://github.com/danielrs/pandora-rs"
+documentation = "https://github.com/danielrs/pandora-rs"
+repository = "https://github.com/danielrs/pandora-rs"
+
+license = "MIT"
+license-file = "./LICENSE"
+
 [dependencies]
+hyper = "0.9.14"
+log = "0.3.6"
+rust-crypto = "0.2.36"
+serde = "0.8"
+serde_derive = "0.8"
+serde_json = "0.8"
+url = "1.2.2"
+
+[[example]]
+name = "main"
+path = "examples/main/main.rs"
